# asciiarena

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
docs/design/: client.md  common.md  communication.md
docs/design/diagrams/: messages.puml
src/: character.rs  client.rs  client_manager.rs  collision.rs  direction.rs  encoding.rs  entity.rs  events.rs  game.rs  ids.rs  lib.rs  logger.rs  main.rs  message.rs  network.rs  network_manager.rs  server.rs  server_manager.rs  session.rs  specification.rs  util.rs  vec2.rs  version.rs
src/app/: client.rs  server.rs
src/client/: actions.rs  application.rs  client_manager.rs  configuration.rs  connection.rs  events.rs  gui.rs  input_widgets.rs  mod.rs  server_proxy.rs  state.rs  store.rs
src/client/frontend/: mod.rs
src/client/frontend/terminal/: events.rs  gui.rs  input.rs  mod.rs  renderer.rs  viewport.rs
src/client/frontend/terminal/gui/: menu.rs  util.rs
src/client/gui/: element.rs  elements.rs  mod.rs  renderer.rs  waiting_room.rs  widgets.rs
src/client/gui/elements/: arena.rs  gui.rs  menu.rs  util.rs
src/client/gui/widgets/: arena.rs  gui.rs  menu.rs
src/client/store/: actions.rs  mod.rs  state.rs
src/client/terminal/: events.rs  input.rs  mod.rs  renderer.rs
src/client/terminal/gui/: arena.rs  menu.rs  mod.rs  util.rs
src/client/terminal/widgets/: arena.rs  gui.rs  menu.rs  util.rs  waiting_room.rs
src/client/util/: store.rs
src/server/: arena.rs  entity.rs  game.rs  map.rs  mod.rs  server_manager.rs  session.rs
src/server/game/: arena.rs  control.rs  entity.rs  map.rs  player.rs
src/server/game/arena/: control.rs  entity.rs  map.rs  spell.rs
src/specification/: spells.rs
