[package]
name = "asciiarena"
description = "Terminal multiplayer arcade game"
version = "0.1.0"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2018"

[dependencies]
message-io = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
colored = "1.9.3"
clap = { version = "2.33.1", features = ["wrap_help"] }
ctrlc = "3.1.5"
rand = "0.7.3"
lazy_static = "1.4.0"
itertools = "0.9.0"
crossterm = "0.17"
tui = { version = "0.10", default-features = false, features = ['crossterm'] }
