[package]
name = "asciiarena"
description = "Terminal multiplayer deathmatch game"
version = "0.0.6"
authors = ["lemunozm <lemunozm@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "Apache-2.0"
homepage = "https://github.com/lemunozm/asciiarena"
repository = "https://github.com/lemunozm/asciiarena"
keywords = ["game", "terminal", "multiplayer", "deatchmatch", "ascii"]
categories = ["command-line-utilities", "command-line-interface", "games", "gui", "network-programming"]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
#message-io = "0.12.2"
message-io = { git = "https://github.com/lemunozm/message-io", branch = "for_each_sync_and_async" }
bincode = "1.3.2"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
fern = { version = "0.6", features = ["colored"] }
chrono = "0.4"
colored = "1.9.3"
clap = { version = "2.33.1", features = ["wrap_help"] }
ctrlc = "3.1.5"
rand = "0.7.3"
lazy_static = "1.4.0"
itertools = "0.9.0"
crossterm = "0.17"
tui = { version = "0.10", default-features = false, features = ['crossterm'] }
derive-new = "0.5.8"
derive_builder = "0.9.0"
